# middleware/set_member_id_in_context.go
@@ -5,8 +5,10 @@ package middleware
 import (
 	"KarlMalone/pkg/app"
 	"KarlMalone/pkg/e"
+	"encoding/base64"
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,15 +16,22 @@ import (
 func SetMemberIdInContext() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		r := app.Gin{C: c}
-		// !!! 优化可以考虑传输加密的member_id，在服务端解析一下
-		memberId := c.GetHeader("member_id")
-		if memberId == "" {
+		authorization := c.GetHeader("Authorization")
+		if !strings.HasPrefix(authorization, "Basic ") {
 			r.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
 			c.Abort()
 			return
 		}
 
-		mId, err := strconv.ParseInt(memberId, 10, 64)
+		basic := strings.TrimPrefix(authorization, "Basic ")
+		memberId, err := base64.StdEncoding.DecodeString(basic)
+		if err != nil || string(memberId) == "" {
+			r.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
+			c.Abort()
+			return
+		}
+
+		mId, err := strconv.ParseInt(string(memberId), 10, 64)
 		if err != nil {
 			r.Response(http.StatusBadRequest, e.ERROR_AHTH_INVALID_HEADERS, nil)
 			c.Abort()
@@ -31,5 +40,4 @@ func SetMemberIdInContext() gin.HandlerFunc {
 		c.Set("member_id", mId)
 		c.Next()
 	}
-
 }
